# Real

./: .gitignore  README.md  build.bat  build.sh  imgui.ini
opengl_renderer/: CMakeLists.txt  imgui.ini  vcpkg.json
opengl_renderer/assets/asset_database/: asset_database.json
opengl_renderer/assets/runtime/meshes/: Raptor:Ani_Disc_Scale_FR7_Breaks_0.mesh  Raptor:Ani_Disc_Scale_FR7_Rim_T_0.mesh  Raptor:Ani_Disc_Scale_FR7_hub_0.mesh  Raptor:Ani_Disc_Scale_FR7_tire_0.mesh  Raptor:Ani_Door_BR7_Raptor:grid_a_0.mesh  Raptor:Ani_Wheel_BL82_Breaks_0.mesh  Raptor:Ani_Wheel_BL82_Rim_T_0.mesh  Raptor:Ani_Wheel_BL82_hub_0.mesh  Raptor:Ani_Wheel_BL82_tire_0.mesh  Raptor:Ani_Wheel_BR82_Breaks_0.mesh  Raptor:Ani_Wheel_BR82_Rim_T_0.mesh  Raptor:Ani_Wheel_BR82_hub_0.mesh  Raptor:Ani_Wheel_BR82_tire_0.mesh  Raptor:Ani_Wheel_Caliper_BL11_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_BR12_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_FL12_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_FR11_Breaks_0.mesh  Raptor:Ani_Wheel_FL82_Breaks_0.mesh  Raptor:Ani_Wheel_FL82_Rim_T_0.mesh  Raptor:Ani_Wheel_FL82_hub_0.mesh  Raptor:Ani_Wheel_FL82_tire_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_1_Int_T_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_2_Leather_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_2_costuras_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_3_Int_T_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_3_Leather_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_4_Metal_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_5_Metal_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_6_Metal_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_7_Metal_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_8_Exhaust_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_005_Raptor:Paaint_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_006_Leather_Int_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_006_costuras_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_007_INT_Plastic_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_008_Metal_Int_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_009_Raptor:INT_cloth_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_010_Cabin_C_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_011_Int_T_0.mesh  Raptor:SK_Door_BL_101_001_SK_Door_BL_101_dummy_material_0_012_Caarbon_0.mesh  (+144 more)
opengl_renderer/assets/runtime/models/: Ford_raptor.model  Raptor:Ani_Disc_Scale_FR7_Breaks_0.mesh  Raptor:Ani_Disc_Scale_FR7_Rim_T_0.mesh  Raptor:Ani_Disc_Scale_FR7_hub_0.mesh  Raptor:Ani_Disc_Scale_FR7_tire_0.mesh  Raptor:Ani_Door_BR7_Raptor:grid_a_0.mesh  Raptor:Ani_Wheel_BL82_Breaks_0.mesh  Raptor:Ani_Wheel_BL82_Rim_T_0.mesh  Raptor:Ani_Wheel_BL82_hub_0.mesh  Raptor:Ani_Wheel_BL82_tire_0.mesh  Raptor:Ani_Wheel_BR82_Breaks_0.mesh  Raptor:Ani_Wheel_BR82_Rim_T_0.mesh  Raptor:Ani_Wheel_BR82_hub_0.mesh  Raptor:Ani_Wheel_BR82_tire_0.mesh  Raptor:Ani_Wheel_Caliper_BL11_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_BR12_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_FL12_Breaks_0.mesh  Raptor:Ani_Wheel_Caliper_FR11_Breaks_0.mesh  Raptor:Ani_Wheel_FL82_Breaks_0.mesh  Raptor:Ani_Wheel_FL82_Rim_T_0.mesh  Raptor:Ani_Wheel_FL82_hub_0.mesh  Raptor:Ani_Wheel_FL82_tire_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_1_Int_T_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_2_Leather_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_2_costuras_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_3_Int_T_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_3_Leather_Int_0.mesh  Raptor:SK_Body_Bones_101_001_SK_Body_Bones_101_dummy_material_4_Metal_Int_0.mesh  (+157 more)
opengl_renderer/include/Common/: Macros.h  RealEnum.h  RealTypes.h
opengl_renderer/include/Core/: AssetManager.h  Callback.h  CmakeConfig.h  Config.h.in  Engine.h  Logger.h  Services.h  Timer.h  Types.h  UUID.h  Utils.h  Window.h  file_manager.h
opengl_renderer/include/Editor/: EditorPanel.h  EditorState.h  HierarchyPanel.h  IPanel.h  InspectorPanel.h
opengl_renderer/include/Graphics/: Buffer.h  Camera.h  Config.h  GPUBuffers.h  Light.h  Material.h  Mesh.h  MeshFactory.h  MeshManager.h  Model.h  ModelLoader.h  RenderCommand.h  RenderContext.h  Renderer.h  Texture.h  TextureArrays.h  Transformations.h
opengl_renderer/include/Input/: CameraInput.h  Input.h  Keycodes.h
opengl_renderer/include/Math/: Math.h
opengl_renderer/include/Resource/: ResourceLoader.h
opengl_renderer/include/Scene/: Components.h  Entity.h  Scene.h  SystemUpdate.h
opengl_renderer/include/Serialization/: Binary.h  Json.h
opengl_renderer/include/Tools/: DDS.h  ImageTools.h
opengl_renderer/include/Util/: Util.h
opengl_renderer/main/: main.cpp
opengl_renderer/shaders/opengl/: buffers.glsl  lighting_calc.glsl  main.frag  main.vert  shadow_map.vert  utils.glsl
opengl_renderer/src/Core/: AssetImporter.cpp  AssetManager.cpp  Callback.cpp  Engine.cpp  Services.cpp  Timer.cpp  UUID.cpp  Window.cpp  file_manager.cpp
opengl_renderer/src/Editor/: EditorPanel.cpp  EditorState.cpp  HierarchyPanel.cpp  InspectorPanel.cpp
opengl_renderer/src/Graphics/: Buffer.cpp  Camera.cpp  Light.cpp  Material.cpp  MeshFactory.cpp  MeshManager.cpp  Model.cpp  ModelLoader.cpp  RenderContext.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureArrays.cpp  Transformations.cpp
opengl_renderer/src/Input/: CameraInput.cpp  Input.cpp
opengl_renderer/src/Math/: Math.cpp
opengl_renderer/src/Resource/: ResourceLoader.cpp
opengl_renderer/src/Scene/: Entity.cpp  Scene.cpp  SystemUpdate.cpp  Systems.cpp
opengl_renderer/src/Serialization/: Binary.cpp  Json.cpp
opengl_renderer/src/Tools/: ImageTools.cpp
opengl_renderer/src/Util/: Util.cpp
opengl_renderer/src/main/: main.cpp
(+519 files in other folders)
